deployment/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: baguette-web
    namespace: baguette
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/ingress.class: "nginx"
spec:
    rules:
    - host: www.baguette.io
      http:
        paths:
        - backend:
            serviceName: baguette-web
            servicePort: 80
          path: "/"
    - host: baguette.io
      http:
        paths:
        - backend:
            serviceName: baguette-web
            servicePort: 80
          path: "/"
